sites/all/themes/titan/local.css
/* ... */
#block-system-main .inner .view-taxonomy-term .node-event .field-name-body,
#block-system-main .inner .view-taxonomy-term .node-event .field-name-field-agenda {
  margin-left: 0;
}

#block-system-main .inner .view-taxonomy-term .node-event .node-header {
  margin-bottom: 16px;
}

#block-menu-menu-events-menu {
  margin: 20px 0;
}

#block-menu-menu-events-menu ul {
  margin-left: 0;
}

#block-menu-menu-events-menu ul li {
  display: inline-block;
  padding-left: 0;
  background-image: none;
  margin: 0 4px 0 0;
}

#block-menu-menu-events-menu ul li a {
  display: block;
  padding: 5px 16px;
  color: #444444;
  border: 1px solid #d1cbb5;
  background-color: #f0ebe7;
}

#block-menu-menu-events-menu ul li a.active {
  background-color: #fbf9f8;
}

#block-menu-menu-events-menu ul li.active a {
  background-color: #fbf9f8;
}

#block-menu-menu-events-menu ul li a:active,
#block-menu-menu-events-menu ul li a:focus {
  background-color: #ffffff;
  outline: none;
}

#block-menu-menu-events-menu ul li a:hover {
  background-color: #ffffff;
}

#node_event_agenda_group_subpage .field-name-field-event-image {
  float: left;
}

#node_event_agenda_group_subpage .field-name-field-agenda,
#node_event_agenda_group_subpage .field-name-field-agenda .field-items,
#node_event_agenda_group_subpage .field-name-field-agenda .field-items table,
#node_event_agenda_group_subpage .field-name-field-agenda .field-items table tbody,
#node_event_agenda_group_subpage .field-name-field-agenda .field-items table tbody tr {
}

.view-event .group_subpage .field-name-field-agenda {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

.view-events .group-info {
  float: right;
}

/*** PEOPLE ***/

#block-views-people-block_1,
#block-views-people-block_2,
#block-views-people-block_3,
#block-views-people-block_4,
#block-views-people-block_5 {
  margin-top: -20px;
}

.view-id-people .cols-4 td {
  width: 240px;
}

.view-id-people td {
  text-align: center;
}

.user-picture {
  margin-bottom: 20px;
}

.view-id-people tr {
  border-bottom: 0;
  height: 300px;
}

.profile .user-picture {
  width: 325px;
}

.profile .user-picture img {
  height: 150px;
}

.profile .group-left-side h3 {
  display: none;
}

.profile .group-left-side {
  float: left;
  display: inline-block;
}

.profile .field-name-field-first-name {
  font-size: 22px;
  font-weight: bold;
  margin-right: 10px;
  display: inline-block;
}

.profile .field-name-field-last-name {
  font-size: 22px;
  font-weight: bold;
  margin-bottom: 10px;
  display: inline-block;
}

.profile .field-name-field-position {
  width: 325px;
  clear: left;
}

.profile .field-name-field-position div {
  display: inline-block;
}

.profile .field-name-field-affiliation {
  width: 325px;
  clear: left;
}

.profile .field-name-field-affiliation div {
  display: inline-block;
}

.profile .field-name-field-email {
  width: 325px;
  clear: left;
}

.profile .field-name-field-email div {
  display: inline-block;
}

.profile .field-name-field-phone {
  width: 325px;
  clear: left;
}

.profile .field-name-field-phone div {
  display: inline-block;
}

.profile .group-right-side h3 {
  display: none;
}

.profile .group-right-side {
  width: 625px;
  float: right;
}

.profile .group-about h3 {
  display: none;
}

.profile .group-about {
  width: 625px;
  margin-bottom: 30px;
}
.profile .field-name-field-bio {
  width: 625px;
}

.profile .field-name-field-education {
  width: 625px;
}

.profile .field-name-field-areas-of-expertise {
  width: 625px;
}

.profile .group-related-entities h3 {
  display: none;
}

.profile .group-related-entities {
  width: 625px;
  background-color: #cdd5de;
}

.profile .field-name-field-people-related-projects {
  width: 595px;
  padding: 10px 15px 10px 15px;
  margin-bottom: 0;
}

.profile .field-name-field-people-related-projects .field-item {
  display: list-item;
  margin-left: 20px;
}

.profile .field-name-field-people-related-resources {
  width: 595px;
  padding: 10px 15px 10px 15px;
}

.profile .field-name-field-people-related-resources .field-item {
  display: list-item;
  margin-left: 20px;
}

.profile .field-name-field-people-publications {
  width: 595px;
  padding: 10px 15px 10px 15px;
}

.profile .field-name-field-people-publications .field-item {
  display: list-item;
  margin-left: 20px;
}

.profile-option {
  width: 260px;
  height: 90px;
  background-color: rgb(191, 202, 140);
  font-size: 20px;
  margin-bottom: 20px;
  margin-right: 20px;
  padding: 20px;
  float: left;
  
}

.profile-option a {
  font-weight: bold;
}

.profile-option a:hover,
.profile-option a:focus,
.profile-option a:active {
  color: #000 !important;
}

.profile-option .small {
  font-size: 75%;
}

/*** ABOUT ***/

